<resources>
    <string name="app_name">Sewa.in</string>
    <string name="title_activity_navigation_panel">NavigationPanel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_tambah_kendaraan">Tambah Kendaraan</string>
    <string name="menu_kendaraan_saya">Kendaraan Saya</string>
    <string name="menu_daftar_kendaraan">Cari Kendaraan</string>
    <string name="detail_kendaraan">Detail Kendaraan</string>
    <string name="edit_akun">Edit Akun</string>
    <string name="detail_kendaraan_sewa">Detail Kendaraan yang Akan Disewa</string>
    <string name="menu_pesan">Pesan</string>
    <string name="menu_keluar">Keluar</string>
    <string name="nama_kendaraan">Nama Kendaraan</string>
    <string name="jenis_kendaraan">Jenis Kendaraan</string>
    <string name="harga_sewa">Harga Sewa</string>
    <string name="lokasi_kendaraan">Lokasi Kendaraan</string>
    <string name="deskripsi_kendaraan">Deskripsi Kendaraan</string>
    <string name="foto_kendaraaan">Foto Kendaraan</string>
    <string name="button_simpan">SIMPAN</string>
    <string name="button_batal">BATAL</string>
    <string name="button_sewa">SEWA</string>
    <string name="button_pilih">PILIH</string>
    <string name="button_kirim_pesan">KIRIM PESAN</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_sewa_kendaraan">Sewa Kendaraan</string>
    <string name="detail_sewa_kendaraan">Detail Sewa Kendaraan</string>


    <string-array name="jenis_kendaraan">
        <item>Motor</item>
        <item>Mobil</item>
    </string-array>

</resources>
