<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tambah_kendaraan"
            android:icon="@drawable/ic_add_circle_outline_black_24dp"
            android:title="@string/menu_tambah_kendaraan" />
        <item
            android:id="@+id/nav_kendaraan_saya"
            android:icon="@drawable/ic_motorcycle_black_24dp"
            android:title="@string/menu_kendaraan_saya" />
        <item
            android:id="@+id/nav_daftar_kendaraan"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/menu_daftar_kendaraan" />
    </group>

    <item android:title="Lainnya">
        <menu>
            <item
                android:id="@+id/nav_pesan"
                android:icon="@drawable/ic_chat_bubble_outline_black_24dp"
                android:title="@string/menu_pesan" />
            <item
                android:id="@+id/nav_signout"
                android:icon="@drawable/ic_chevron_left_black_24dp"
                android:title="@string/menu_keluar" />
        </menu>
    </item>

</menu>
