<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:id="@+id/cardView"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:layout_margin="5dp"
    android:foreground="?android:attr/selectableItemBackground">
    <LinearLayout
        android:layout_margin="20px"
        android:orientation="vertical"
        android:layout_width="180dp"
        android:layout_height="650px">
        <ImageView
            android:id="@+id/imgFotoKendaraan"
            android:background="@drawable/foto"
            android:layout_width="match_parent"
            android:layout_height="450px"/>
        <LinearLayout
            android:padding="20px"
            android:scrollbars="vertical"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/txtNamaKendaraan"
                android:text="@string/nama_kendaraan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/txtHargwaSewa"
                android:text="@string/harga_sewa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/txtLokasi"
                android:text="@string/lokasi_kendaraan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>