<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:scrollbars="vertical"
    android:fillViewport="true"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/text_kendaraan_saya"
            android:padding="50px"
            android:text="@string/menu_tambah_kendaraan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:paddingBottom="80px"
            android:textSize="50px"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:elevation="2dp"
                android:layout_margin="20px"
                android:orientation="vertical"
                android:layout_width="500px"
                android:layout_height="650px">
                <ImageView
                    android:id="@+id/imgFotoKendaraanSaya"
                    android:elevation="9dp"
                    android:background="@drawable/shadow"
                    android:layout_width="match_parent"
                    android:layout_height="450px"/>
                <LinearLayout
                    android:padding="20px"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/txtJenisKendaraan"
                        android:text="@string/jenis_kendaraan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/txtHargwaSewa"
                        android:text="@string/harga_sewa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/txtLokasi"
                        android:text="@string/lokasi_kendaraan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>